# dossier

./: .coveragerc  .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  alembic.ini  pyproject.toml
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 2026_01_17_0000_001_initial_schema.py  2026_01_17_0001_002_add_project_version.py  2026_01_18_0000_003_add_performance_indexes.py  2026_01_18_0001_004_add_full_name_column.py  2026_01_19_0000_005_add_delta_tables.py
docs/: DELTA_ENTITY_PLAN.md  architecture.md  contributing.md  dashboard.md  extending.md  index.md  overview.md  quickstart.md  roadmap.md  settings.md  workflows.md
scripts/: lint_ascii.py
src/dossier/: __init__.py  cli.py  config.py  dossier_file.py
src/dossier/api/: __init__.py  main.py
src/dossier/models/: __init__.py  schemas.py
src/dossier/parsers/: __init__.py  autolinker.py  base.py  github.py
src/dossier/tui/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_github.py  test_models.py  test_parsers.py  test_tui.py  test_workflows.py
